--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,4 +21,47 @@ body {
 
 a {
   text-decoration: none;
+  color: #000;
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.page .icon {
+  width: 80px;
+  height: 80px;
+}
+
+.page .title {
+  font-size: 30px;
+  font-weight: 300;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+}
+
+.page .subtitle__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.page .subtitle {
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.content {
+  background-color: var(--primary-color);
+  position: absolute;
+  top: 0;
+  left: 71px;
+  display: flex;
+  flex-direction: column;
+  width: 470px;
+  height: 100%;
+  padding: 30px 25px;
+  z-index: 1;
 }
