--- a/client/src/pages/profile/ProfileContent.css
+++ b/client/src/pages/profile/ProfileContent.css
@@ -74,7 +74,7 @@
 }
 
 .profile .section--1 .user .status {
-    color: gray;
+    color: var(--dark-blue);
 }
 
 .profile .section--2 {
@@ -106,6 +106,11 @@
     flex-direction: column;
     align-items: start;
     gap: 4px;
+}
+
+.profile .section--2 .info div span:last-child {
+    font-size: 14px;
+    color: var(--dark-blue);
 }
 
 
